# server

./: .gitignore
clientPart/tcp/src/: client.cpp
clientPart/udp/src/: CMakeLists.txt
serverPart/udp/src/: CMakeLists.txt
src/: server.cpp
